[metadata]
name = dash
version = 1.0.0
author = Willian
author_email = will.hayashida07@gmail.com
description = A simple dashboard
long_description = file: README.md
long_description_content_type = text/markdown
url = none
license = MIT

[options]
packages = dash
install_requires =
    numpy
    pandas
    plotly
    dash
    dash-core-components
    dash-html-components
python_requires = >=3.12
package_dir = src